--- a/docsGuia/JavaScript_DOM_Eventos_inicio/JavaScript_DOM_Eventos_inicio/css/style.css
+++ b/docsGuia/JavaScript_DOM_Eventos_inicio/JavaScript_DOM_Eventos_inicio/css/style.css
@@ -232,8 +232,17 @@ img {
     background-color: rgb(185, 0, 0);
     text-align: center;
     padding: 1rem;
-    color: var(--blanco);
+    color:var(--blanco);
     text-transform: uppercase;
+    border-radius: .5rem;
+}
+.mensajeExitoso{
+    background-color: rgb(74, 185, 0);
+    text-align: center;
+    padding: 1rem;
+    color:var(--blanco);
+    text-transform: uppercase;
+    border-radius: .5rem;
 }
 .correcto {
     background-color: rgb(74, 185, 0);
